fixed dark mode issue

--- a/components/dashboardComponents/css/pointDashboard.module.css
+++ b/components/dashboardComponents/css/pointDashboard.module.css
@@ -35,7 +35,6 @@
 }
 
 .body {
-    background-color: white;
     width: 95%;
     margin: auto;
     border-radius: 7px;
