--- a/components/statisticsComponents/css/matchStats.module.css
+++ b/components/statisticsComponents/css/matchStats.module.css
@@ -1,5 +1,4 @@
 .fullPage {
-    background-color: #cccce0;
     width: 100%;
     padding-bottom: 20px;
 }
