--- a/components/statisticsComponents/css/returnDataPanel.module.css
+++ b/components/statisticsComponents/css/returnDataPanel.module.css
@@ -6,7 +6,6 @@
 }
 
 .body {
-    background-color: white;
     width: 95%;
     margin: auto;
     border-radius: 7px;
